// protoc --go_out=. --go_opt=paths=source_relative \         
//     --go-grpc_out=. --go-grpc_opt=paths=source_relative \
//     pb/helloworld/hello.proto

syntax = "proto3";

option go_package = "test-grpc/internal/pb/helloworld";

package helloworld;

// The greeting service definition.
service HelloService {
  // Sends a greeting
  rpc Sayhello (HelloRequest) returns (HelloReply) {}
  // Sends another greeting
  rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}